MET-1074: Set validation parameters in validation workflow plugins.

--- a/metis-core-rest/src/main/resources/metis.properties.example
+++ b/metis-core-rest/src/main/resources/metis.properties.example
@@ -53,6 +53,14 @@ ecloud.provider=
 ecloud.username=
 ecloud.password=
 
+#Validation
+validation.external.schema.zip=
+validation.external.schema.root=
+validation.external.schematron.root=
+validation.internal.schema.zip=
+validation.internal.schema.root=
+validation.internal.schematron.root=
+
 #Authentication
 authentication.baseUrl=
 
