MET-1073 Add support to indicate solr is ready and searchable from last index.
On DatasetExecutionInformation there are two new boolean fields that indicate if an index, preview or publish, is "committed" in solr and therefore ready to be searched through the portal.

--- a/metis-core-rest/src/main/resources/metis.properties.example
+++ b/metis-core-rest/src/main/resources/metis.properties.example
@@ -44,7 +44,7 @@ redis.enableSSL=
 #True if a custom certificate is used in the truststore defined above
 redis.enable.custom.truststore=
 
-solr.url=
+solr.commit.period.in.mins=
 
 #ECloud
 ecloud.baseUrl=
