--- a/metis-core-rest/src/main/resources/metis.properties.example
+++ b/metis-core-rest/src/main/resources/metis.properties.example
@@ -69,3 +69,6 @@ allowed.cors.hosts=*
 
 #Use this to specify the FQDN where the application will be hosted under
 metis.core.baseUrl=
+#In the combination of TEST and ACCEPTANCE, TEST=false, ACCEPTANCE=true
+#For the production environment it should be false
+metis.use.alternative.indexing.environment=
