MET-1243: Create monitor thread that keeps track of updates.
This replaces the system in which we wait for stuff to happen in the
database before deciding whether or not to accept/claim a workflow
execution.

--- a/metis-core-rest/src/main/resources/metis.properties.example
+++ b/metis-core-rest/src/main/resources/metis.properties.example
@@ -1,6 +1,8 @@
 #Orchestration
 max.concurrent.threads=
-monitor.check.interval.in.secs=
+dps.monitor.check.interval.in.secs=
+failsafe.margin.of.inactivity.in.secs=
+periodic.execution.monitor.check.in.millisecs=
 periodic.failsafe.check.in.millisecs=
 periodic.scheduler.check.in.millisecs=
 redisson.lock.watchdog.timeout.in.secs=
