Use DpsClient constructor with timeouts instead of own implementation.

--- a/metis-core-rest/src/main/resources/metis.properties.example
+++ b/metis-core-rest/src/main/resources/metis.properties.example
@@ -1,7 +1,8 @@
 #Orchestration
 max.concurrent.threads=
 dps.monitor.check.interval.in.secs=
-dps.request.timeout.in.secs=
+dps.connect.timeout.in.millisecs=
+dps.read.timeout.in.millisecs=
 failsafe.margin.of.inactivity.in.secs=
 periodic.failsafe.check.in.millisecs=
 periodic.scheduler.check.in.millisecs=
