--- a/metis-core-rest/pom.xml
+++ b/metis-core-rest/pom.xml
@@ -57,6 +57,10 @@
           <artifactId>jsr311-api</artifactId>
           <groupId>javax.ws.rs</groupId>
         </exclusion>
+        <exclusion>
+          <artifactId>mockito-all</artifactId>
+          <groupId>org.mockito</groupId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
