MET-1468 Make the minute cap configurable.

--- a/metis-core-rest/src/main/resources/metis.properties.example
+++ b/metis-core-rest/src/main/resources/metis.properties.example
@@ -8,6 +8,8 @@ periodic.failsafe.check.in.millisecs=
 periodic.scheduler.check.in.millisecs=
 redisson.lock.watchdog.timeout.in.secs=
 polling.timeout.for.cleaning.completion.service.in.secs=
+#If a task passed this cap the task will be cancelled
+period.of.no.processed.records.change.in.minutes=
 
 #Socks Proxy
 socks.proxy.enabled=
