MET-1094 First commit with many changes to start support for JUnit 5.
In this commit metis Authentication has full support and successful build.

--- a/metis-core-service/pom.xml
+++ b/metis-core-service/pom.xml
@@ -96,9 +96,8 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${version.junit}</version>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
