--- a/metis-core-rest/pom.xml
+++ b/metis-core-rest/pom.xml
@@ -116,7 +116,6 @@
     <dependency>
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest-all</artifactId>
-      <version>${version.hamcrest}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -127,9 +126,8 @@
     </dependency>
 
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${version.junit}</version>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
