--- a/metis-core-rest/pom.xml
+++ b/metis-core-rest/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>metis-core</artifactId>
     <groupId>eu.europeana.metis</groupId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
   </parent>
   <artifactId>metis-core-rest</artifactId>
   <packaging>war</packaging>
