--- a/metis-core-rest/src/main/resources/metis.properties.example
+++ b/metis-core-rest/src/main/resources/metis.properties.example
@@ -77,3 +77,4 @@ metis.core.baseUrl=
 #In the combination of TEST and ACCEPTANCE, TEST=false, ACCEPTANCE=true
 #For the production environment it should be false
 metis.use.alternative.indexing.environment=
+metis.link.checking.default.sampling.size=
