--- a/metis-core-service/pom.xml
+++ b/metis-core-service/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>metis-core</artifactId>
     <groupId>eu.europeana.metis</groupId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.2.0</version>
   </parent>
   <artifactId>metis-core-service</artifactId>
 
