MET-1881: impose max served execution count on queries.

--- a/metis-core-rest/src/main/resources/metis.properties.example
+++ b/metis-core-rest/src/main/resources/metis.properties.example
@@ -74,6 +74,9 @@ allowed.cors.hosts=*
 
 #Use this to specify the FQDN where the application will be hosted under
 metis.core.baseUrl=
+#Use this to specify the maximum execution list length that is served by 
+#Metis Core (regardless on whether the list is paginated).
+metis.core.max.served.execution.list.length=
 #In the combination of TEST and ACCEPTANCE, TEST=false, ACCEPTANCE=true
 #For the production environment it should be false
 metis.use.alternative.indexing.environment=
