MET-2725: All depublish ID conversions in one utils class.

--- a/metis-core-common/pom.xml
+++ b/metis-core-common/pom.xml
@@ -9,6 +9,16 @@
   <artifactId>metis-core-common</artifactId>
   <dependencies>
     <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>eu.europeana.metis</groupId>
       <artifactId>metis-authentication-common</artifactId>
       <version>${project.version}</version>
