--- a/metis-core-common/pom.xml
+++ b/metis-core-common/pom.xml
@@ -66,7 +66,7 @@
     <dependency>
       <groupId>org.mongodb</groupId>
       <artifactId>mongodb-driver-core</artifactId>
-      <version>${version.mongo.java.driver}</version>
+      <version>${version.mongodb.driver.core}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
