--- a/metis-core-common/pom.xml
+++ b/metis-core-common/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>metis-core</artifactId>
     <groupId>eu.europeana.metis</groupId>
-    <version>1.10.0-SNAPSHOT</version>
+    <version>2</version>
   </parent>
   <artifactId>metis-core-common</artifactId>
   <dependencies>
