--- a/metis-core-rest/pom.xml
+++ b/metis-core-rest/pom.xml
@@ -134,7 +134,7 @@
     </dependency>
     <dependency>
       <groupId>eu.europeana.metis</groupId>
-      <artifactId>metis-common</artifactId>
+      <artifactId>metis-common-internal</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
