--- a/metis-core-rest/pom.xml
+++ b/metis-core-rest/pom.xml
@@ -139,6 +139,11 @@
     </dependency>
     <dependency>
       <groupId>eu.europeana.metis</groupId>
+      <artifactId>metis-common-mongo</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>eu.europeana.metis</groupId>
       <artifactId>metis-authentication-rest-client</artifactId>
       <version>${project.version}</version>
     </dependency>
