--- a/metis-core-service/pom.xml
+++ b/metis-core-service/pom.xml
@@ -137,6 +137,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>eu.europeana.metis</groupId>
+      <artifactId>metis-common-mongo</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>com.jayway.awaitility</groupId>
       <artifactId>awaitility</artifactId>
       <version>${version.awaitability}</version>
