MET-3093 Rename metis-common-internal to metis-common-utils

--- a/metis-core-common/pom.xml
+++ b/metis-core-common/pom.xml
@@ -25,7 +25,7 @@
     </dependency>
     <dependency>
       <groupId>eu.europeana.metis</groupId>
-      <artifactId>metis-common-internal</artifactId>
+      <artifactId>metis-common-utils</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
