MET-3505 Add redis username
Version 6 of redis can have a username too now

--- a/metis-core-rest/src/main/resources/metis.properties.example
+++ b/metis-core-rest/src/main/resources/metis.properties.example
@@ -45,6 +45,7 @@ mongo.application.name=
 #Redis
 redis.host=
 redis.port=0
+redis.username=
 redis.password=
 redis.enableSSL=
 #True if a custom certificate is used in the truststore defined above
