--- a/metis-core-common/pom.xml
+++ b/metis-core-common/pom.xml
@@ -35,6 +35,12 @@
       <groupId>eu.europeana.cloud</groupId>
       <artifactId>ecloud-service-dps-rest-client-java</artifactId>
       <version>${version.ecloud}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>dev.morphia.morphia</groupId>
