--- a/metis-core-service/pom.xml
+++ b/metis-core-service/pom.xml
@@ -31,6 +31,17 @@
     </dependency>
     <dependency>
       <groupId>eu.europeana.cloud</groupId>
+      <artifactId>ecloud-service-uis-rest-client-java</artifactId>
+      <version>${version.ecloud}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>eu.europeana.cloud</groupId>
       <artifactId>ecloud-service-mcs-rest-client-java</artifactId>
       <version>${version.ecloud}</version>
       <exclusions>
