MET-4564_MET-4728 Implement Media Processing Throttling levels (#571)
* MET-4564_MET-4728 Started implementing code

* MET-4564_MET-4728 Changed prepareDpsRask in MediaProcessPlugin

* MET-4564_MET-4728 Trying to autowire throttling values

* MET-4564_MET-4728 Put new setting values for workflow settings

* MET-4564_MET-4728 Removed ThrottlingLevelValuePair class together with ThrottlingLevel enum

Code review changes

* MET-4564_MET-4728 Added enum ThrottlingLevel back

--- a/metis-core-rest/src/main/resources/metis.properties.example
+++ b/metis-core-rest/src/main/resources/metis.properties.example
@@ -9,6 +9,9 @@ periodic.scheduler.check.in.millisecs=
 polling.timeout.for.cleaning.completion.service.in.millisecs=
 #If a task passed this cap the task will be cancelled
 period.of.no.processed.records.change.in.minutes=
+thread.limit.throttling.level.weak=
+thread.limit.throttling.level.medium=
+thread.limit.throttling.level.strong=
 
 #Socks Proxy
 socks.proxy.enabled=
