--- a/metis-core-common/pom.xml
+++ b/metis-core-common/pom.xml
@@ -17,6 +17,12 @@
       <artifactId>junit-jupiter-engine</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <version>${version.junit}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>eu.europeana.metis</groupId>
       <artifactId>metis-authentication-common</artifactId>
       <version>${project.version}</version>
