--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,14 @@
   <artifactId>metis-core</artifactId>
   <packaging>pom</packaging>
 
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <version.spring.boot>2.7.5</version.spring.boot>
+  </properties>
+
   <modules>
     <module>metis-core-common</module>
     <module>metis-core-service</module>
     <module>metis-core-rest</module>
   </modules>
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
 </project>
