Feat/met 4866 dockerize metis dereference (#594)
* MET-4866 Dockerize metis-dereference-rest

* MET-4866 Add support for mongo secure connections

Furthermore, solve the issue spring actuator and springfox swagger incompatibility

* MET-4866 Migrate to new open api and swagger

* MET-4866 Allow x-forwarded-prefix header

* MET-4866 Update example file

* MET-4866 Update example file

* MET-4866 Javadoc

* MET-4866 Process review

--- a/metis-core-rest/docker-compose.yml
+++ b/metis-core-rest/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     ports:
       - '27017:27017'
   metis-core-local:
-    image: europeana/metis-core:feat-MET-4984-dockerize-metis-core
+    image: europeana/metis-core:develop
     container_name: metis-core-local
     build:
       context: ./
