Feat/met 5002 deprecate validation enrichment rest (#595)
* MET-5002 Remove validation and enrichment rest modules

* MET-5002 Centralize and reuse elastic apm configuration

* MET-5002 Add more analysis badges

* MET-5002 Technical debt

* MET-5002 Remove validation-client and enrichment-service

* MET-5002 Attempt fix false positive bug report

* MET-5002 Update github actions versions to fix deprecation warning

* MET-5002 Update poms

* MET-5002 Cleanup comment leftovers

* MET-5002 Remove unused classes

* MET-5002 Process review

* MET-5002 Process review

--- a/metis-core-rest/pom.xml
+++ b/metis-core-rest/pom.xml
@@ -35,6 +35,7 @@
       <groupId>co.elastic.apm</groupId>
       <artifactId>apm-agent-attach</artifactId>
       <version>${version.elastic.apm}</version>
+      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>eu.europeana.cloud</groupId>
@@ -104,10 +105,6 @@
           <artifactId>commons-logging</artifactId>
         </exclusion>
       </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-tx</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
