MET-5392: Make WebResourceWrapper comparable and getFileByteSize (#620)
* MET-5392: Make WebResourceWrapper comparable and getFileByteSize

* MET-5392: Add reusable metis spring properties

First trial with clio and further updates should follow.

* MET-5392: Restructure packages

* MET-5392: Fix ecloud code updates

* MET-5392: Technical debt

* MET-5392: Renaming to match annotation, avoiding internal naming conflicts with property classes

* MET-5392: Update metis dereference

* MET-5392: Update example properties

* MET-5392: Update metis-authentication to reuse configuration properties

* MET-5392: Update metis-core to reuse configuration properties

* MET-5392: Update metis-repository to reuse configuration properties

* MET-5392: Remove not needed postgres configuration properties

--- a/metis-core-rest/pom.xml
+++ b/metis-core-rest/pom.xml
@@ -112,6 +112,11 @@
     </dependency>
     <dependency>
       <groupId>eu.europeana.metis</groupId>
+      <artifactId>metis-common-spring-properties</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>eu.europeana.metis</groupId>
       <artifactId>metis-core-service</artifactId>
       <version>${project.version}</version>
     </dependency>
