debt/MET-5237 update morphia dependency (#625)
* MET-5237 update morphia, testcontainers and wiremock dependencies

* MET-5237 add pending dependency

--- a/metis-core-service/pom.xml
+++ b/metis-core-service/pom.xml
@@ -132,5 +132,9 @@
       <version>${version.awaitability}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.jetbrains</groupId>
+      <artifactId>annotations</artifactId>
+    </dependency>
   </dependencies>
 </project>
