Revert "MET-5473: Upgrade to jdk 21 builder (#639)"
This reverts commit 8ef51fbb2a2541e7357a22c95fff2e676b7983cf.

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <version.spring.boot>2.7.5</version.spring.boot>
   </properties>
 
   <modules>
