--- a/metis-core-service/pom.xml
+++ b/metis-core-service/pom.xml
@@ -25,8 +25,8 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>eu.europeana.metis</groupId>
       <artifactId>metis-transformation-service</artifactId>
+      <groupId>eu.europeana.metis</groupId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
@@ -83,8 +83,8 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.wiremock</groupId>
-      <artifactId>wiremock-standalone</artifactId>
+      <groupId>com.github.tomakehurst</groupId>
+      <artifactId>wiremock</artifactId>
       <scope>test</scope>
       <exclusions>
         <exclusion>
