MET-5474: Update to jdk21 build (#643)
Upgrade wiremock com.github.tomakehurst:wiremock:2.35.1 -> org.wiremock:wiremock-standalone:3.3.1
Remove duplicate wiremock-jre8

--- a/metis-core-service/pom.xml
+++ b/metis-core-service/pom.xml
@@ -83,9 +83,8 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>com.github.tomakehurst</groupId>
-      <artifactId>wiremock</artifactId>
-      <scope>test</scope>
+      <groupId>org.wiremock</groupId>
+      <artifactId>wiremock-standalone</artifactId>
       <exclusions>
         <exclusion>
           <groupId>com.fasterxml.jackson.core</groupId>
