Remove project.version instances that could cause build issues

--- a/metis-core-common/pom.xml
+++ b/metis-core-common/pom.xml
@@ -26,12 +26,12 @@
     <dependency>
       <groupId>eu.europeana.metis</groupId>
       <artifactId>metis-common-utils</artifactId>
-      <version>${project.version}</version>
+      <version>${version.metis-framework}</version>
     </dependency>
     <dependency>
       <groupId>eu.europeana.metis</groupId>
       <artifactId>metis-common-mongo</artifactId>
-      <version>${project.version}</version>
+      <version>${version.metis-framework}</version>
       <exclusions>
         <exclusion>
           <groupId>eu.europeana.corelib</groupId>
