--- a/metis-core-service/pom.xml
+++ b/metis-core-service/pom.xml
@@ -17,17 +17,17 @@
     <dependency>
       <groupId>eu.europeana.metis</groupId>
       <artifactId>metis-authentication-common</artifactId>
-      <version>${project.version}</version>
+      <version>${version.metis-framework}</version>
     </dependency>
     <dependency>
       <groupId>eu.europeana.metis</groupId>
       <artifactId>metis-core-common</artifactId>
-      <version>${project.version}</version>
+      <version>${version.metis-framework}</version>
     </dependency>
     <dependency>
       <artifactId>metis-transformation-service</artifactId>
       <groupId>eu.europeana.metis</groupId>
-      <version>${project.version}</version>
+      <version>${version.metis-framework}</version>
     </dependency>
     <dependency>
       <groupId>eu.europeana.cloud</groupId>
