--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <!--Internal versions-->
     <version.ecloud>13-SNAPSHOT</version.ecloud>
-    <version.metis-framework>13</version.metis-framework>
+    <version.metis-framework>14-SNAPSHOT</version.metis-framework>
     <version.metis-schema>10</version.metis-schema>
     <version.corelib>2.16.10-SNAPSHOT</version.corelib>
 
